# sknkx

./: CMakeLists.txt
include/sknkx_opt/: defect.hpp  sknkxBlp.hpp  sknkxCore.hpp  sknkxNlp.hpp  sknkxPhase.hpp  sknkxUtil.hpp
src/: constraintfunc.cpp  defect.cpp  main.cpp  modelfunc.cpp  sknkxBlp.cpp  sknkxCore.cpp  sknkxNlp.cpp  sknkxPhase.cpp  sknkxUtil.cpp
